adding footer and something else

--- a/index.html
+++ b/index.html
@@ -293,6 +293,104 @@
             </div>
         </div>
     </section>
+    <section class="top-environmentalist">
+        <div class="title-text">
+            <h1>
+                Top environmentalists
+            </h1>
+            <h3>
+                What Environmentalists say!
+            </h3>
+        </div>
+        <div class="row">
+            <div class="column">
+                <div class="user">
+                    <img src="images/environmentalist1.jpg" alt="">
+                    <div class="user-i4">
+                        <h3>
+                            Lady Bird Johnson <i class="fa-brands fa-twitter"></i>
+                        </h3>
+                        <small>@LadyBird</small>
+                    </div>
+                </div>
+                <p>
+                    "The environment is where we all meet; where we all have a mutual interest; it is the one thing all
+                    of us share."
+                    <br>-Lady Bird Johnson
+                </p>
+            </div>
+            <div class="column">
+                <div class="user">
+                    <img src="images/environmentalist1.jpg" alt="">
+                    <div class="user-i4">
+                        <h3>
+                            Lady Bird Johnson <i class="fa-brands fa-twitter"></i>
+                        </h3>
+                        <small>@LadyBird</small>
+                    </div>
+                </div>
+                <p>
+                    "The environment is where we all meet; where we all have a mutual interest; it is the one thing all
+                    of us share."
+                    <br>-Lady Bird Johnson
+                </p>
+            </div>
+            <div class="column">
+                <div class="user">
+                    <img src="images/environmentalist1.jpg" alt="">
+                    <div class="user-i4">
+                        <h3>
+                            Lady Bird Johnson <i class="fa-brands fa-twitter"></i>
+                        </h3>
+                        <small>@LadyBird</small>
+                    </div>
+                </div>
+                <p>
+                    "The environment is where we all meet; where we all have a mutual interest; it is the one thing all
+                    of us share."
+                    <br>-Lady Bird Johnson
+                </p>
+            </div>
+        </div>
+    </section>
+    <section id="footer">
+        <img src="images/logo.png" class="footer-img">
+        <div class="title-text">
+            <h1>
+                Join Us
+            </h1>
+            <p>
+                Join Us in the Noble Cause!
+            </p>
+        </div>
+        <div class="footer-row">
+            <div class="footer-column">
+                <h1>
+                    Environmental awareness Ltd.
+                </h1>
+                <p>
+                    <i class="fa-solid fa-clock"></i> Available 24/7
+                </p>
+                <p>
+                    <i class="fa-solid fa-location-dot"></i> Vietnam
+                </p>
+            </div>
+            <div class="footer-column">
+                <h1>
+                    Get in touch with Us
+                </h1>
+                <p>
+                    <i class="fa-duotone fa-solid fa-address-card"></i> Ho Chi Minh city,Vietnam
+                </p>
+                <p>
+                    <i class="fa-notdog fa-solid fa-phone"></i>+84047601669
+                </p>
+                <p>
+                  <i class="fa-regular fa-envelope"></i> abcdzyz@gmail.com
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
